# aegis-detect

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
aegis/: __init__.py  cleanup.py  cli.py  predictor.py
data/: __init__.py  collect_ai_code.py  collect_human_code.py  preprocess.py  standardize_code.py  teacher.py
model/: baseline.py  dataset.py  eval.py  train.py  utils.py  weight_analysis.py
model/results/: model_results.json
tests/: conftest.py  test_cli.py
